# serializer version: 1
# name: test_groups_and_users
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_groups_and_users.1
  dict({
    'active': True,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_groups_and_users.2
  dict({
    'active': True,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'zclark',
    'id': 'fb085f7f',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_groups_and_users[job]
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
      'foreign': -9158348948.40671,
      'movie': 748,
      'outside': 2513,
      'two': 468.89084383643,
      'we': -899431834.68956,
      'whose': 8388626647.46166,
    }),
    'created_at': datetime,
    'id': '7cf872dc',
    'ping': None,
    'progress': 50,
    'stage': 'JURZHTCWaKMqqBTFitpK',
    'state': <JobState.TIMEOUT: 'timeout'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 10,
        'stage': 'MReEKilxKJTbTDOKidKx',
        'state': <JobState.PREPARING: 'preparing'>,
        'step_description': 'UVFacqRcQYvCYYRgaXva',
        'step_name': 'MReEKilxKJTbTDOKidKx',
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 20,
        'stage': 'aNYJFjFkpJjyVGbVPgnH',
        'state': <JobState.RUNNING: 'running'>,
        'step_description': 'QHfiScknqtDSSXFzHxwT',
        'step_name': 'aNYJFjFkpJjyVGbVPgnH',
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 30,
        'stage': 'kEahrPLrGciZpuCpymcj',
        'state': <JobState.RUNNING: 'running'>,
        'step_description': 'BdurvfVyRYryKwpMUVGt',
        'step_name': 'kEahrPLrGciZpuCpymcj',
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 40,
        'stage': 'deMdauAxzEJvtZnOwsdS',
        'state': <JobState.RUNNING: 'running'>,
        'step_description': 'KUxJgukcXlhktChZZhvJ',
        'step_name': 'deMdauAxzEJvtZnOwsdS',
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 50,
        'stage': 'JURZHTCWaKMqqBTFitpK',
        'state': <JobState.TIMEOUT: 'timeout'>,
        'step_description': 'yPAVdgpNxSPTxttBbePA',
        'step_name': 'JURZHTCWaKMqqBTFitpK',
        'timestamp': datetime,
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'jobs_aodp',
  })
# ---
# name: test_jobs[job]
  dict({
    'acquired': False,
    'archived': False,
    'args': dict({
      'fact': 'LdJCGRddpwdyFKunVyUD',
      'nearly': 951.93581531826,
      'network': 'fhKcDVBJbHFDutYbbXjg',
      'season': 6981,
      'task': 'RrnFxjyvDAqsRnDaMrco',
      'third': 'SUEXExIZVPeFzGRmMglP',
    }),
    'created_at': datetime,
    'id': 'fb085f7f',
    'ping': None,
    'progress': 10,
    'stage': 'NzFJEUSgqMReEKilxKJT',
    'state': <JobState.PREPARING: 'preparing'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime,
      }),
      dict({
        'error': None,
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': <JobState.PREPARING: 'preparing'>,
        'step_description': 'bTDOKidKxUVFacqRcQYv',
        'step_name': 'NzFJEUSgqMReEKilxKJT',
        'timestamp': datetime,
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
    'workflow': 'jobs_pathoscope_bowtie',
  })
# ---
# name: test_subtractions
  dict({
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.rev.2.bt2',
        'id': 3,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.rev.1.bt2',
        'id': 4,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.4.bt2',
        'id': 5,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.3.bt2',
        'id': 6,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.fa.gz',
        'id': 7,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': '7cf872dc',
        'type': 'fasta',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_datetime',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_uploads[upload[reserved]]
  dict({
    'created_at': datetime,
    'id': 3,
    'name': 'test.fq.gz',
    'name_on_disk': '3-test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': True,
    'size': 16700094,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_uploads[upload[subtraction]]
  dict({
    'created_at': datetime,
    'id': 2,
    'name': 'test.fq.gz',
    'name_on_disk': '2-test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 16700094,
    'type': 'subtraction',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_uploads[upload]
  dict({
    'created_at': datetime,
    'id': 1,
    'name': 'test.fq.gz',
    'name_on_disk': '1-test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 16700094,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
